cluster/apps/beancount/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beancount-deployment
  namespace: beancount
  labels:
    app: beancount
spec:
  replicas: 1
  selector:
    matchLabels:
      app: beancount
  template:
    metadata:
      labels:
        app: beancount
    spec:
      containers:
        - name: beancount
          image: yegle/fava:v1.23
          ports:
            - name: web
              containerPort: 5000
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          volumeMounts:
            - mountPath: /bean
              name: beancount-data-storage
      volumes:
        - name: beancount-gravity-storage
          persistentVolumeClaim:
            claimName: beancount-data-claim
