cluster/apps/beancount/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: beancount-svc
  namespace: beancount
spec:
  selector:
    app: beancount
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: web
